# dalek

./: .gitignore  CMakeLists.txt  Cargo.toml  MakeFloppy.cmake  Makefile  Makefile.inc  Makefile.mk  README.md  build.rs  dalek.bochs  linker.ld  mkfloppy.sh  x86_64-bare.json
bootloader/: CMakeLists.txt  install.py
bootloader/stage1/: CMakeLists.txt  Makefile  fat1x.s  fat32.s  linker.ld  stage1.s
bootloader/stage2/: CMakeLists.txt  Makefile  cli.c  floppy.c  fs.c  gdt.S  get.c  get.c2  idt.S  idt.c  io.c  irq.S  irq.c  keyboard.c  linker.ld  main.c  memory.c  modules.c  panic.c  ports.c  printf.c  stage2.S  stage2.s  stdio.c  strings.c  timer.c
bootloader/stage2/commands/: chainload.S  chainload.c  clear.c  devices.c  echo.c  filesystem.c  halt.c  memory.c  read.c  reboot.c  root.c  rust.c  rust.rs  test_timer.c  version.c
bootloader/stage2/devices/floppy/: floppy.c  floppy.h
bootloader/stage2/devices/keyboard/: keyboard.c  keyboard.h
bootloader/stage2/devices/keyboard/keymaps/: es_es.c
bootloader/stage2/devices/screen/: screen.c  screen.h
bootloader/stage2/filesystems/fat/: fat.c  fat.h
bootloader/stage2/include/: boot.h  cli.h  dma.h  errno.h  floppy.h  fs.h  get.h  idt.h  io.h  irq.h  keyboard.h  memory.h  modules.h  panic.h  ports.h  printf.h  registers.h  stdio.h  strings.h  timer.h  types.h
bootloader/stage2/keymaps/: es_es.c
cmake/modules/: CMakeDetermineRustCompiler.cmake  CMakeRustCompiler.cmake.in  CMakeRustInformation.cmake
cmake/modules/Platform/: .i386.cmake.swp  i386.cmake
iso/: grub.cfg
src/: CMakeLists.txt  exception_handlers.rs  idt.rs  log.rs  main.rs  multiboot.rs  serial.rs  vga_buffer.rs
src/arch/: CMakeLists.txt  mod.rs
src/arch/x86_64/: CMakeLists.txt  boot.s  linker.ld  long_mode.s  multiboot.s
src/bootinfo/: mod.rs  tags.rs
src/iso/: CMakeLists.txt  grub.cfg
