[package]
name = "rusty_dalek"
version = "0.0.0"
authors = ["Alejandro Alvarez Ayllon <alejandro.alvarez.ayllon@cern.ch>"]
publish = false
build = "build.rs"

[build-dependencies]
glob = "0.2"

[dependencies]
rlibc = "1.0"
spin = "0.4.5"
volatile = "0.1.0"

[dependencies.lazy_static]
version = "0.2.1"
features = ["spin_no_std"]

